--- a/.htaccess
+++ b/.htaccess
@@ -154,8 +154,11 @@ RewriteRule ^\.gitignore$ - [F]
 RewriteRule ^README\.md$ - [F]
 RewriteRule ^index\.template\.html$ - [F]
 RewriteRule ^preactalpha\.template\.html$ - [F]
-RewriteRule ^testclient\.html$ - [F]
+# RewriteRule ^testclient\.html$ - [F]
 RewriteRule ^testclient-beta\.html$ - [F]
+
+DirectoryIndex testclient.html
+RewriteRule ^index\.html$ - [F]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^(apple-touch-icon-precomposed\.png)$ - [R=404,L]
