--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ package-lock.json
 
 !/data/pokedex-mini.js
 !/data/pokedex-mini-bw.js
+
+!/js/battle-sound.js
+!/data/moves.js
+!/data/graphics.js
+!/js/battle-tooltips.js
+!/js/battle.js
+!/data/items.js
+!/data/abilities.js
